crates/myso-core/src/authority/snapshots/myso_core__authority__execution_time_estimator__tests__execution_time_observer_v100.snap
---
source: crates/myso-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 100
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 6
          - secs: 0
            nanos: 20000000
        - - 8
          - secs: 0
            nanos: 6000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 20000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 8
          - secs: 0
            nanos: 34000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 9
          - secs: 0
            nanos: 43000000
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - SplitCoins
    - observations:
        - - 1
          - secs: 0
            nanos: 61000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 89000000
        - - 7
          - secs: 0
            nanos: 79000000
        - - 8
          - secs: 0
            nanos: 30000000
      stake_weighted_median:
        secs: 0
        nanos: 79000000
  - - Upgrade
    - observations:
        - - 1
          - secs: 0
            nanos: 505000000
        - - 6
          - secs: 0
            nanos: 309000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 10
          - secs: 0
            nanos: 75000000
        - - 8
          - secs: 0
            nanos: 144000000
      stake_weighted_median:
        secs: 0
        nanos: 162000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 436000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 436000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 162000000
  - - mixed_move_calls
    - secs: 0
      nanos: 598000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 406000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 474000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 305000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 86000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 120000000
  - - mixed_commands
    - secs: 0
      nanos: 360000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
