crates/myso-core/src/authority/snapshots/myso_core__authority__execution_time_estimator__tests__execution_time_observer_v106.snap
---
source: crates/myso-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 106
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 7000000
        - - 8
          - secs: 0
            nanos: 9000000
        - - 9
          - secs: 0
            nanos: 16000000
      stake_weighted_median:
        secs: 0
        nanos: 9000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 8
          - secs: 0
            nanos: 17000000
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 60000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 7
          - secs: 0
            nanos: 77000000
        - - 2
          - secs: 0
            nanos: 18000000
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 70000000
      stake_weighted_median:
        secs: 0
        nanos: 70000000
  - - Upgrade
    - observations:
        - - 10
          - secs: 0
            nanos: 926000000
        - - 10
          - secs: 0
            nanos: 540000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 7
          - secs: 0
            nanos: 746000000
      stake_weighted_median:
        secs: 0
        nanos: 926000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 10
          - secs: 0
            nanos: 201000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 201000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 166000000
        - - 2
          - secs: 0
            nanos: 383000000
        - - 3
          - secs: 0
            nanos: 405000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 405000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 201000000
  - - mixed_move_calls
    - secs: 0
      nanos: 606000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 344000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 280000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 305000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 64000000
  - - make_move_vec_3_elements
    - secs: 0
      nanos: 36000000
  - - mixed_commands
    - secs: 0
      nanos: 333000000
  - - upgrade_package
    - secs: 0
      nanos: 926000000
